add screenshot functionality Co-authored-by: Alex Ostrovsky <a.ostrovsky@mac.com>

--- a/client/galaxy/style/scss/base.scss
+++ b/client/galaxy/style/scss/base.scss
@@ -172,6 +172,9 @@ body {
      width: 100%;
      height: 100%;
     }
+    #workflow-container {
+        height: 100%;
+    }
     // Replaces unnecessary if/then logic in base_panels.mako
     &:first-child {
         left: 0;
